wrap tecniques fix

--- a/style.css
+++ b/style.css
@@ -316,6 +316,7 @@ justify-content: center;
 {
     display: flex;
     gap:10px;
+    flex-wrap: wrap;
 }
 
 .radioTechniqueItem
